[package]
name = "quarry"
version = "0.1.0"
edition = "2021"
description = "Dependency audit and update planner for agent workflows"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
regex = "1"

[dev-dependencies]
tempfile = "3"
